# file-tmux-file

./: .gitignore  README.md  pyproject.toml
.claude/: wiggum-loop.local.md
docs/plans/: 2025-12-31-file-tmux-file-design.md  2026-01-02-window-title-in-filename-design.md
logs/: 2025-12-31-hi-im-claude-running-in-window-5-i-just-built.txt  story.md
src/file_tmux_file/: __init__.py  cleanup.py  input_queue.py  main.py  snapshot.py  tmux.py
tasks/: protocol.md
tasks/done/: 001.json
tests/: race_test.py  stress_test.py
tmux/0/0/0/: content.txt
tmux/0/1/0/: content.txt
tmux/0/2/0/: content.txt
tmux/0/3/0/: content.txt
tmux/0/4/0/: content.txt
tmux/0/5/0/: content.txt
