[project]
name = "file-tmux-file"
version = "0.1.0"
description = "Continuous tmux snapshot and input queue tool"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
file-tmux-file = "file_tmux_file.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/file_tmux_file"]
